--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "method-override": "^2.3.4",
     "morgan": "^1.6.1",
     "multer": "^1.0.0",
-    "socket.io": "^1.3.6",
-    "web-terminal": "^0.7.0"
+    "socket.io": "^1.3.6"
   }
 }
