--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "soam",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "SOA based application manager",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=development DEBUG=socket.io:* nodemon server.js",
-    "test": "NODE_ENV=test DEBUG=socket.io:* node server.js"
+    "start": "NODE_ENV=development node-dev server.js",
+    "test": "NODE_ENV=test DEBUG=socket.io:* node-dev server.js"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,11 @@
   "license": "ISC",
   "dependencies": {
     "ansi_up": "^1.2.1",
-    "body-parser": "^1.13.2",
-    "dockerode": "^2.2.2",
-    "errorhandler": "^1.4.1",
+    "bl": "^1.0.0",
+    "dockerode": "^2.2.3",
     "express": "^4.13.1",
     "jade": "^1.11.0",
-    "method-override": "^2.3.4",
-    "morgan": "^1.6.1",
-    "multer": "^1.0.0",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "through2": "^2.0.0"
   }
 }
