--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dockerode": "^2.2.3",
     "express": "^4.13.1",
     "jade": "^1.11.0",
+    "lodash": "^3.10.1",
     "socket.io": "^1.3.6",
     "through2": "^2.0.0"
   }
